# lite-xl-uwuify

./: Cargo.toml  LICENSE  Makefile  cbindgen.toml  logs.txt  readme.md  readme_uwu.md
csrc/: init.lua  main.c  uwu.c
csrc/include/: uwu.h
src/: lib.rs
