[package]
name = "litexl-uwufier"
version = "0.1.0"
edition = "2021"
crate-type = ["staticlib"]

[lib]
name = "uwuify_c"
crate-type = ["staticlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uwuify = "0.2.2"
libc = "0.2.125"
c_string = "0.7.2"
